# ofrdecomp

./: .gitignore  2bd0.asm  57f0.c  CLAUDE.md  CMakeLists.txt  Oops.rej  README.md  cmds.lldb  cmds_fixed.lldb  dump.asm  dump_entropy2  dump_entropy2.c  dump_vtable.c  dylib.dump  hook.cpp  libOptimFROG.0.dylib  libOptimFROG.dylib  libhook.dylib  optimfrogcpp  sine_mono.ofr  sine_mono.raw  sine_mono_payload.raw
.github/workflows/: build.yml  conformance.yml
doc/: optimfrog_re_knowledge.md  pred3_analysis.md
docs/: algorithm_details.md
include/: OptimFROG.h  PortableTypes.h  SystemID.h  md5.h  optimfrog_decoder.h  optimfrog_decoder.h.orig  optimfrog_decoder.h.rej  optimfrog_encoder.h  optimfrog_tables.h  optimfrogcpp.hpp
src/: main.cpp  optimfrog.cpp  optimfrog_decoder.cpp  optimfrog_decoder.cpp.orig  optimfrog_decoder.cpp.rej  optimfrog_decoder.cpp.rej.orig  optimfrog_decoder_ent3.cpp  optimfrog_decoder_entropy.cpp  optimfrog_decoder_entropy.cpp.rej  optimfrog_decoder_post2.cpp  optimfrog_decoder_pred3.cpp  optimfrog_decoder_predictor.cpp  optimfrog_encoder.cpp
src/cli/: main.cpp  ofr_main.cpp  ofrenc_main.cpp
src/core/: optimfrog.cpp  optimfrog_decoder.cpp  optimfrog_decoder_dualstream.cpp  optimfrog_decoder_entropy.cpp  optimfrog_decoder_float.cpp  optimfrog_decoder_post2.cpp  optimfrog_decoder_pred3.cpp  optimfrog_decoder_predictor.cpp  optimfrog_encoder.cpp  optimfrog_encoder_float.cpp  optimfrogcpp.cpp
tests/conformance/: gen_synthetic.py  gen_synthetic_float.py  ref_gen.c  run.sh  run_float.sh
